--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
   </section>
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
-  <script src="/javascripts/app.js"></script>
+  <script src="javascripts/app.js"></script>
 </body>
 </html>
